Fix frontend editor issues: project loading, asset display, multiple HTML pages, and authentication

--- a/public/frontend-editor.html
+++ b/public/frontend-editor.html
@@ -56,7 +56,7 @@
                         <select id="html-file-selector" class="file-select">
                             <option value="index.html">index.html</option>
                         </select>
-                        <button class="btn btn-small" onclick="frontendEditor.addFile('html')">+</button>
+                        <button class="btn btn-small" id="add-html-file">+</button>
                     </div>
                     <textarea id="html-editor" placeholder="Write your HTML here...">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
