Updated frontend playground

--- a/public/landing.html
+++ b/public/landing.html
@@ -30,7 +30,7 @@
         <p class="text">Write any Programming Language, see instant results, and share your projects with the world</p>
         <div class="button-group">
             <button class="primary-btn"><a href="/editor">Start Coding</a></button>
-            <button class="secondary-btn"><a href="/frontend-editor">🚀 Frontend Playground</a></button>
+            <button class="secondary-btn"><a href="/frontend-editor">🚀 Simple Web Playground</a></button>
         </div>
     </div>
 
