--- a/public/frontend-editor.html
+++ b/public/frontend-editor.html
@@ -23,8 +23,6 @@
             <button id="auth-toggle" class="btn btn-login">
                 🔐 Login
             </button>
-
-            <button id="file-manager-btn" class="btn btn-secondary">📁 File Manager</button>
         </div>
     </header>
 
@@ -163,58 +161,6 @@ document.addEventListener('DOMContentLoaded', function() {
         </div>
     </div>
 
-    <div id="file-manager-modal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2>📁 File Manager</h2>
-                <button class="close-modal">&times;</button>
-            </div>
-            <div class="modal-body">
-                <!-- File Tree -->
-                <div class="file-tree">
-                    <div class="tree-header">
-                        <h3>Project Structure</h3>
-                        <div class="tree-actions">
-                            <button id="new-folder" class="btn-small">📁 New Folder</button>
-                            <button id="new-file" class="btn-small">📄 New File</button>
-                            <button id="upload-assets" class="btn-small">📤 Upload</button>
-                        </div>
-                    </div>
-                    <div id="file-tree-container">
-                        <!-- Dynamic file tree will be generated here -->
-                    </div>
-                </div>
-
-                <!-- File Editor -->
-                <div class="file-editor-panel">
-                    <div class="editor-header">
-                        <select id="file-selector" class="night-input">
-                            <option value="">Select a file to edit</option>
-                        </select>
-                        <div class="editor-actions">
-                            <button id="save-file" class="btn-small">💾 Save</button>
-                            <button id="delete-file" class="btn-small">🗑️ Delete</button>
-                            <button id="rename-file" class="btn-small">✏️ Rename</button>
-                        </div>
-                    </div>
-                    <div class="file-editor-container">
-                        <textarea id="file-editor" placeholder="Edit file content..."></textarea>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="pages-preview" class="pages-preview">
-        <div class="pages-header">
-            <h3>📄 Page Previews</h3>
-            <button id="close-pages">&times;</button>
-        </div>
-        <div class="pages-list">
-            <!-- Pages will be dynamically added here -->
-        </div>
-    </div>
-
     <!-- Success Notification -->
     <div id="success-notification" class="notification">
         <span>✓</span> Project saved successfully! Share URL copied to clipboard.
@@ -233,21 +179,7 @@ document.addEventListener('DOMContentLoaded', function() {
     </div>
 
     <script>
-        console.log('=== DEBUG: Checking authentication state ===');
-        console.log('Cookies:', document.cookie);
-        const token = document.cookie.split('; ').find(row => row.startsWith('token='));
-        console.log('Token found:', !!token);
-        if (token) {
-            console.log('Token value:', token.split('=')[1].substring(0, 20) + '...');
-
-            // Test the token
-            fetch('/verify-token', {
-                headers: { 'Authorization': 'Bearer ' + token.split('=')[1] }
-            })
-                .then(response => response.json())
-                .then(data => console.log('Token verification result:', data))
-                .catch(err => console.error('Token verification failed:', err));
-        }
+        console.log('=== DEBUG: Token handler script loaded ===');
 
         // Function to show editor selection popup
         function showEditorSelectionPopup() {
